@@ -53,6 +53,8 @@ void yahoo_set_identity_status(int id, const char * identity, int active);
 void yahoo_get_list(int id);
 /* download buddy contact information from your yahoo addressbook */
 void yahoo_get_yab(int id);
+/* add an address book entry.  if yab->dbid is set, it will */
+/* modify that entry else it creates a new entry */
 void yahoo_add_yab(int id, struct yab * yab);
 void yahoo_keepalive(int id);
 
