@@ -1,3 +1,6 @@
+* Wed Feb 5 2003 Philip
+- Support for modifying an address book entry
+
 * Mon Jan 27 2003 Philip
 - Support for adding address book entry on the server
 
